--- a/_locales/eo/messages.json
+++ b/_locales/eo/messages.json
@@ -317,8 +317,8 @@
   "disappearingMessagesTimer": "Tempigilo",
   "disappearingMessagesTurnedOff": "<b>{name}</b> malŝaltis memviŝontajn mesaĝojn. Mesaĝoj kiujn ili sendos, ne plu malaperos.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> malŝaltis memviŝontatajn mesaĝojn.<b>for</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>Vi</b> malŝaltis memviŝontajn mesaĝojn. Mesaĝoj kiujn vi sendos, ne plu malaperos.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Vi</b> malŝaltis memviŝontatajn mesaĝojn.",
+  "disappearingMessagesTurnedOffYou": "<b>Vi</b> <b>malŝaltis</b> memviŝontajn mesaĝojn. Mesaĝoj kiujn vi sendos, ne plu malaperos.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Vi</b> <b>malŝaltis</b> memviŝontatajn mesaĝojn.",
   "disappearingMessagesTypeRead": "legita",
   "disappearingMessagesTypeSent": "sendita",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> malŝaltis malaperantajn mesaĝojn.",
@@ -401,9 +401,9 @@
   "groupLeaveDescriptionAdmin": "Ĉu vi certas, ke vi volas foriri el <b>{group_name}</b>?<br/><br/>Ĉi tio forigos ĉiujn membrojn kaj forigos ĉiun grupon enhavo.",
   "groupLeaveErrorFailed": "Malsukceso forlasi {group_name}",
   "groupLegacyBanner": "Grupoj ĝisdatigitaj, kreu novan grupon por ĝisdatigi. Malnova grupa funkcio malkreskos de {date}.",
-  "groupMemberLeft": "<b>{name} <\\ /b> forlasis la grupon.",
-  "groupMemberLeftMultiple": "<b>{name}</b> kaj <b>{count} aliaj </b> forlasis la grupon.",
-  "groupMemberLeftTwo": "<b>{name} </b> kaj <b>{other_name} </b> forlasis la grupon.",
+  "groupMemberLeft": "<b>{name}</b> forlasis la grupon.",
+  "groupMemberLeftMultiple": "<b>{name}</b> kaj <b>{count} aliaj</b> forlasis la grupon.",
+  "groupMemberLeftTwo": "<b>{name}</b> kaj <b>{other_name}</b> forlasis la grupon.",
   "groupMemberNew": "<b>{name}</b> grupaniĝis.",
   "groupMemberNewHistory": "<b>{name}</b> estis invitita aniĝi al la grupo. Babilhistorio estis dividita.",
   "groupMemberNewHistoryMultiple": "<b>{name}</b> kaj <b>{count} aliaj</b> estis invititaj aniĝi al la grupo. Babilhistorio estis dividita.",
