--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -7,7 +7,7 @@
   "accountIdEnter": "شناسه حساب را وارد کنید",
   "accountIdErrorInvalid": "این شناسه حساب کاربری معتبر نیست. لطفا بررسی کنید و دوباره تلاش کنید.",
   "accountIdOrOnsEnter": "شناسه حساب یا ONS را وارد کنید",
-  "accountIdOrOnsInvite": "Invite Account ID or ONS",
+  "accountIdOrOnsInvite": "دعوت شناسه ی کاربری یا ONS",
   "accountIdShare": "سلام، من از {app_name} برای چت کردن با حداکثر حریم خصوصی و امنیت استفاده می‌کنم. به من بپیوند! شناسه حساب من<br/><br/>{account_id}<br/><br/>آن را از {session_download_url} دانلود کنید",
   "accountIdYours": "Your Account ID",
   "accountIdYoursDescription": "این شناسه حساب کاربری شماست. کاربران دیگر می‌توانند آن را اسکن کنند تا با شما مکالمه را آغاز کنند.",
@@ -22,14 +22,14 @@
   "adminPromoteTwoDescription": "آیا مطمئن هستید که می‌خواهید <b>{name}</b> و <b>{other_name}‍</b> را به عنوان مدیر ارتقا دهید؟ مدیرها نمی‌توانند حذف شوند.",
   "adminPromotedToAdmin": "<b>{name}</b> به مدیر ارتقاء یافت.",
   "adminPromotionFailed": "ارتقاء ادمین ناموفق بود",
-  "adminPromotionFailedDescription": "ارتقاء {name} به دستیار در {group_name} ناموفق بود",
+  "adminPromotionFailedDescription": "ارتقاء {name} در {group_name} ناموفق بود",
   "adminPromotionFailedDescriptionMultiple": "ارتقاء {name} و {count} نفر دیگر به دستیار در {group_name} ناموفق بود",
-  "adminPromotionFailedDescriptionTwo": "ارتقاء {name} و {other_name} به دستیار در {group_name} ناموفق بود",
+  "adminPromotionFailedDescriptionTwo": "ارتقاء {name} و {other_name} در {group_name} ناموفق بود",
   "adminPromotionSent": "ارتقاء ادمین ارسال شد",
   "adminRemove": "حذف مدیران",
   "adminRemoveAsAdmin": "حذف به عنوان مدیر",
   "adminRemoveCommunityNone": "هیچ ادمینی در این انجمن وجود ندارد.",
-  "adminRemoveFailed": "حذف {name} به عنوان دستیار ناموفق بود.",
+  "adminRemoveFailed": "حذف {name} به عنوان مدیر ناموفق بود.",
   "adminRemoveFailedMultiple": "حذف <b>{name}</b> و <b>{count} سایرین</b> از مدیریت ناموفق بود.",
   "adminRemoveFailedOther": "حذف <b>{name}</b>و<b>{other_name}</b> از مدیریت ناموفق بود.",
   "adminRemovedUser": "<b>{name}</b> از مدیریت حذف شد.",
@@ -45,7 +45,7 @@
   "appearanceLanguage": "زبان",
   "appearanceLanguageDescription": "تنظیم زبان خود را برای {app_name} انتخاب کنید. هنگامی که تنظیم زبان خود را تغییر دهید، {app_name} مجدداً راه‌اندازی خواهد شد.",
   "appearancePreview1": "حالت چطور است؟",
-  "appearancePreview2": "من خوبم، تو چی؟",
+  "appearancePreview2": "من خوبم ممنون، تو چی؟",
   "appearancePreview3": "من عالی‌ام، ممنون.",
   "appearancePrimaryColor": "رنگ اصلی",
   "appearanceThemes": "پوسته ها",
@@ -127,9 +127,6 @@
   "blockBlockedUser": "مسدود شد {name}",
   "blockDescription": "آیا مطمئنید می‌خواهید <b>{name} را مسدود کنید؟</b> کاربران مسدود شده نمی‌توانند درخواست پیام، دعوت گروهی یا تماس ارسال کنند.",
   "blockUnblock": "رفع مسدودیت",
-  "blockUnblockName": "آیا مطمئن هستید که می‌خواهید انسداد </b>{name}<b> را بردارید؟",
-  "blockUnblockNameMultiple": "آیا مطمئن هستید که می‌خواهید انسداد </b>{name}<b> و </b>{count}<b> نفر دیگر را بردارید؟",
-  "blockUnblockNameTwo": "آیا مطمئن هستید که می‌خواهید انسداد </b>{name}<b> و ۱ نفر دیگر را بردارید؟",
   "blockUnblockedUser": "رفع مسدودیت {name}",
   "call": "تماس",
   "callsCalledYou": "{name} با شما تماس گرفت",
@@ -154,7 +151,7 @@
   "callsSettings": "تماس‌ها (بتا)",
   "callsVoiceAndVideo": "تماس‌های صوتی و تصویری",
   "callsVoiceAndVideoBeta": "تماس‌های صوتی و تصویری (بتا)",
-  "callsVoiceAndVideoModalDescription": "آدرس IP شما برای مخاطب تماس شما و همچنین سرور Oxen Foundation در هنگام استفاده از تماس آزمایشی مشخص خواهید بود.",
+  "callsVoiceAndVideoModalDescription": "آدرس IP شما برای مخاطب تماس شما و همچنین سرور Oxen Foundation در هنگام استفاده از تماس آزمایشی مشخص خواهد بود.",
   "callsVoiceAndVideoToggleDescription": "دریافت و ارسال تماس های صوتی و تصویری به سایر کاربران را فعال کنید.",
   "callsYouCalled": "تماس شما با {name}",
   "callsYouMissedCallPermissions": "شما تماسی را از <b>{name}</b> از دست دادید زیرا <b>تماس‌های صوتی و تصویری</b> را در تنظیمات حریم خصوصی فعال نکرده‌اید.",
@@ -201,9 +198,9 @@
   "communityJoinDescription": "آیا مطمئن هستید که می‌خواهید به {community_name} بپیوندید؟",
   "communityJoinError": "پیوستن به انجمن ناموفق بود",
   "communityJoinOfficial": "یا به یکی از این‌ها بپیوندید…",
-  "communityJoined": "پیوستن به انجمن",
+  "communityJoined": "پیوست به انجمن",
   "communityJoinedAlready": "شما قبلا عضو این گروه شده اید.",
-  "communityLeave": "Leave Community",
+  "communityLeave": "ترک انجمن",
   "communityLeaveError": "ترک {community_name} ناموفق بود",
   "communityUnknown": "انجمن ناشناس",
   "communityUrl": "URL انجمن",
@@ -274,9 +271,9 @@
   "deleteAfterLegacyGroupsGroupCreation": "تا زمانی که گروه ایجاد شود، لطفاً صبر کنید...",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "خطا در به‌روزرسانی گروه",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "شما اجازه حذف پیام‌های دیگران را ندارید",
-  "deleteMessage": "{count, plural, one [حذف پیام] other [پیام ها را پاک کنید]}",
+  "deleteMessage": "{count, plural, one [پیام را پاک کنید] other [پیام ها را پاک کنید]}",
   "deleteMessageConfirm": "آیا مطمئن هستید که می‌خواهید این پیام را حذف کنید؟",
-  "deleteMessageDeleted": "{count, plural, one [پیام حذف شد] other [پبام ها حذف شدند]}",
+  "deleteMessageDeleted": "{count, plural, one [پیام پاک شد] other [پبام ها حذف شدند]}",
   "deleteMessageDeletedGlobally": "این پیام حذف شده است",
   "deleteMessageDeletedLocally": "این پیام در این دستگاه پاک شد",
   "deleteMessageDescriptionDevice": "آیا مطمئن هستید که می‌خواهید این پیام را فقط از این دستگاه حذف کنید؟",
@@ -284,7 +281,7 @@
   "deleteMessageDeviceOnly": "حذف فقط از این دستگاه",
   "deleteMessageDevicesAll": "حذف از تمام دستگاه‌هایم",
   "deleteMessageEveryone": "حذف برای همه",
-  "deleteMessageFailed": "{count, plural, one [خطا در ارسال پیام] other [خطا در ارسال پیام]}",
+  "deleteMessageFailed": "{count, plural, one [خطا در حذف پیام] other [خطا در حذف پیام ها]}",
   "deleteMessagesConfirm": "آیا مطمئن هستید که می‌خواهید این پیام‌ها را حذف کنید؟",
   "deleteMessagesDescriptionDevice": "آیا مطمئن هستید می‌خواهید این پیام‌ها را فقط از این دستگاه حذف کنید؟",
   "deleteMessagesDescriptionEveryone": "آیا مطمئن هستید می‌خواهید این پیام‌ها را برای همه حذف کنید؟",
@@ -353,7 +350,7 @@
   "emojiReactsCoolDown": "آهسته! شما بیش از اندازه ایموجی واکنش ارسال کرده اید. بزودی دوباره تلاش کنید",
   "emojiReactsCountOthers": "{count, plural, one [و # نفر دیگر با {emoji} به این پیام واکنش نشان داده‌اند.] other [و # نفر دیگر با {emoji} به این پیام واکنش نشان داده‌اند.]}",
   "emojiReactsHoverNameDesktop": "{name} با {emoji_name} واکنش نشان داد",
-  "emojiReactsHoverNameTwoDesktop": "{name} و {other_name} با {emoji_name} واکنش نشان دادند",
+  "emojiReactsHoverNameTwoDesktop": "{name} و {other_name} با {emoji_name} واکنش دادند",
   "emojiReactsHoverTwoNameMultipleDesktop": "{name} و <span>{count} سایرین</span> با {emoji_name} واکنش نشان دادند",
   "emojiReactsHoverYouNameDesktop": "شما با {emoji_name} واکنش نشان دادید",
   "emojiReactsHoverYouNameMultipleDesktop": "شما و <span>{count} سایرین </span> با {emoji_name} واکنش نشان دادید",
@@ -398,14 +395,13 @@
   "groupInviteYouAndMoreNew": "از <b>شما</b> و <b>{count} سایرین </b> دعوت شده است تا به گروه بپیوندید.",
   "groupInviteYouAndOtherNew": "از <b>شما</b> و <b>{other_name}</b> دعوت شده است تا به گروه بپیوندید.",
   "groupLeave": "ترک کردن گروه",
-  "groupLeaveDescription": "آیا مطمئن هستید که می‌خواهید </b>{group_name}<b> را ترک کنید؟",
   "groupLeaveDescriptionAdmin": "ایا مطمین هستید می خواهید <b>{group_name}</b> را ترک کنید؟ <br/><br/>این کار باعث حذف همه ی اعضا و پاک شدن تمام محتوای گروه خواهد شد.",
   "groupLeaveErrorFailed": "ترک {group_name} ناموفق بود",
   "groupLegacyBanner": "گروه‌ها ارتقا یافته‌اند، یک گروه جدید ایجاد کنید تا ارتقا دهید. عملکرد گروه قدیمی از {date} کاهش می‌یابد.",
   "groupMemberLeft": "<b>{name}</b> گروه را ترک کرد.",
   "groupMemberLeftMultiple": "<b>{name}</b> و <b>{count} نفر دیگر</b> گروه را ترک کردند.",
   "groupMemberLeftTwo": "<b>{name}</b> و <b>{other_name}</b> گروه را ترک کردند.",
-  "groupMemberNew": "<b>{name}</b> به گروه ملحق شد.",
+  "groupMemberNew": "<b>{name}</b> دعوت شد تا به گروه ملحق شود.",
   "groupMemberNewHistory": "از <b>{name}</b> برای عضویت در گروه دعوت شد. تاریخچه ی چت به اشتراک گذاشته شد.",
   "groupMemberNewHistoryMultiple": "<b>{name}</b> و <b>{count} سایرین </b> دعوت شدند تا به گروه بپیوندند. تاریخچه ی چت به اشتراک گذاشته شد.",
   "groupMemberNewHistoryTwo": "<b>{name}</b> و <b>{other_name}</b> دعوت شدند تا به گروه بپیوندند. تاریخچه ی چت به اشتراک گذاشته شد.",
@@ -431,7 +427,7 @@
   "groupRemoveDescriptionMultiple": "آیا می‌خواهید <b>{name}</b> و <b>{count} نفر دیگر</b> را از <b>{group_name}</b> حذف کنید؟",
   "groupRemoveDescriptionTwo": "آیا می‌خواهید <b>{name}</b> و <b>{other_name}</b> را از <b>{group_name}</b> حذف کنید؟",
   "groupRemoveMessages": "{count, plural, one [کاربر و پیام هایش را حذف کنید] other [کاربران و پیام هایشان را حذف کنید]}",
-  "groupRemoveUserOnly": "{count, plural, one [حذف کاربر ] other [کاربران را حذف کنید]}",
+  "groupRemoveUserOnly": "{count, plural, one [کاربر را حذف کنید ] other [کاربران را حذف کنید]}",
   "groupRemoved": "<b>{name}</b> از گروه حذف شد.",
   "groupRemovedMultiple": "<b>{name}</b> و <b>{count} نفر دیگر</b> از گروه حذف شدند.",
   "groupRemovedTwo": "<b>{name}</b> و <b>{other_name}</b> از گروه حذف شدند.",
@@ -457,7 +453,7 @@
   "image": "تصویر",
   "incognitoKeyboard": "صفحه‌کلید ناشناس",
   "incognitoKeyboardDescription": "درخواست حالت ناشناس اگر موجود باشد. بسته به صفحه کلیدی که استفاده می‌کنید، صفحه کلید شما ممکن است این درخواست را نادیده بگیرد.",
-  "info": "Info",
+  "info": "اطلاعات",
   "invalidShortcut": "میانبر نامعتبر",
   "join": "پیوستن",
   "later": "بعد",
@@ -517,14 +513,14 @@
   "messageNew": "{count, plural, one [پیام جدید] other [پیام های جدید]}",
   "messageNewDescriptionDesktop": "با ورود شناسه حساب کاربری دوست خود یا ONS یک گفتگوی جدید شروع کنید.",
   "messageNewDescriptionMobile": "با ورود شناسه حساب کاربری، ONS یا اسکن کد QR دوست خود یک گفتگوی جدید شروع کنید.",
-  "messageNewYouveGot": "{count, plural, one [شما یک پیام جدید دریافت کردید.] other [شما از طرف # پیام جدید دارید.]}",
+  "messageNewYouveGot": "{count, plural, one [شما یک پیام جدید دریافت کردید.] other [شما # پیام جدید دارید.]}",
   "messageReplyingTo": "پاسخ به",
   "messageRequestGroupInvite": "<b>{name}</b> شما را برای پیوستن به <b>{group_name}</b> دعوت کرد.",
   "messageRequestGroupInviteDescription": "ارسال پیام به این گروه به صورت خودکار دعوت گروه را پذیرفته می‌کند.",
   "messageRequestPending": "درخواست پیام شما در حال انتظار است.",
   "messageRequestPendingDescription": "شما قادر به ارسال پیام‌های صوتی و پیوست‌ها خواهید بود پس از اینکه دریافت‌کننده این درخواست پیام را تایید کند.",
   "messageRequestYouHaveAccepted": "شما درخواست پیام را از <b>{name} قبول کردید</b>.",
-  "messageRequestsAcceptDescription": "ارسال پیام به این کاربر درخواست پیام او را به صورت خودکار قبول می‌کند.",
+  "messageRequestsAcceptDescription": "ارسال پیام به این کاربر درخواست پیام او را به صورت خودکار قبول می‌کند و شناسه کاربری شما را برملا می سازد.",
   "messageRequestsAccepted": "درخواست پیام شما پذیرفته شد.",
   "messageRequestsClearAllExplanation": "ایا مطمین هستید می خواهید همه ی درخواست های پیام رسانی و دعوت به گروه ها را پاک کنید؟",
   "messageRequestsCommunities": "درخواست‌های پیام انجمن‌ها",
@@ -596,7 +592,7 @@
   "on": "روشن",
   "onboardingAccountCreate": "ایجاد حساب کاربری",
   "onboardingAccountCreated": "حساب ساخته شد",
-  "onboardingAccountExists": "I have an account",
+  "onboardingAccountExists": "من یک حساب کاربری دارم",
   "onboardingBackAccountCreation": "شما نمی توانید بیش از این به عقب بروید. برای اینکه ساختن حساب کاربری خود را لغو کنید {app_name} باید بسته شود.",
   "onboardingBackLoadAccount": "شما نمی توانید بیش از این به عقب بروید. برای متوقف کردن بارگیری حساب {app_name} باید بسته شود.",
   "onboardingBubbleCreatingAnAccountIsEasy": "ساختن یک حساب کاربری فوری و رایگان و ناشناس است {emoji}",
@@ -694,12 +690,12 @@
   "recoveryPasswordErrorMessageGeneric": "لطفاً شناسه بازیابی خود را بررسی و دوباره تلاش کنید.",
   "recoveryPasswordErrorMessageIncorrect": "برخی از کلمات در رمز بازیابی شما نادرست است. لطفاً بررسی کنید و دوباره تلاش کنید.",
   "recoveryPasswordErrorMessageShort": "رمز بازیابی وارد شده به اندازه کافی طولانی نیست. لطفا بررسی کنید و دوباره تلاش کنید.",
-  "recoveryPasswordErrorTitle": "Incorrect Recovery Password",
+  "recoveryPasswordErrorTitle": "گذرواژه ی بازیابی نادرست است",
   "recoveryPasswordExplanation": "برای بارگیری حساب کاربری، رمز بازیابی خود را وارد کنید.",
-  "recoveryPasswordHidePermanently": "Hide Recovery Password Permanently",
+  "recoveryPasswordHidePermanently": "گذرواژه بازیابی خود را به طور دایم مخفی کنید",
   "recoveryPasswordHidePermanentlyDescription1": "بدون رمز عبور بازیابی، نمی‌توانید حساب خود را در دستگاه‌های جدید بارگیری کنید. <br/><br/>ما قویاً توصیه می‌کنیم گذرواژه بازیابی خود را قبل از ادامه در مکانی امن و مطمئن ذخیره کنید.",
   "recoveryPasswordHidePermanentlyDescription2": "آیا مطمئن هستید که می‌خواهید گذرواژه بازیابی خود را روی این دستگاه به صورت دائمی پنهان کنید؟ این کار قابل برگشت نیست.",
-  "recoveryPasswordHideRecoveryPassword": "Hide Recovery Password",
+  "recoveryPasswordHideRecoveryPassword": "گذرواژه بازیابی خود را مخفی کنید",
   "recoveryPasswordHideRecoveryPasswordDescription": "بازیابی رمز عبور خود را در این دستگاه برای همیشه پنهان کنید.",
   "recoveryPasswordRestoreDescription": "برای بارگذاری حساب خود، رمز بازیابی خود را وارد کنید. اگر آن را ذخیره نکرده‌اید، می‌توانید آن را در تنظیمات برنامه خود پیدا کنید.",
   "recoveryPasswordView": "نمایش گذرواژه",
@@ -709,7 +705,7 @@
   "removePasswordFail": "حذف گذرواژه ناموفق بود",
   "reply": "پاسخ",
   "resend": "ارسال مجدد",
-  "resolving": "کشورهای در حال بارگذاری ...",
+  "resolving": "اطلاعات کشورها در حال بارگذاری است...",
   "restart": "راه‌اندازی مجدد",
   "resync": "بازنشانی همگام‌سازی",
   "retry": "تلاش مجدد",
@@ -720,7 +716,7 @@
   "scan": "اسکن",
   "screenSecurity": "امنیت صفحه نمایش",
   "screenshotNotifications": "اعلانات اسکرین‌شات.",
-  "screenshotNotificationsDescription": "لازم داشتن اعلانیه وقتی یک مخاطب از یک چت یک به یک اسکرین شات می‌گیرد.",
+  "screenshotNotificationsDescription": "درخواست مطلع شدن بده وقتی یک مخاطب از یک چت یک به یک اسکرین شات می‌گیرد.",
   "screenshotTaken": "<b>{name}</b> از صفحه یک عکس گرفت.",
   "search": "جستجو",
   "searchContacts": "جستجوی مخاطبین",
