--- a/_locales/ka/messages.json
+++ b/_locales/ka/messages.json
@@ -127,7 +127,7 @@
   "blockBlockedUser": "დაბლოკილი {name}",
   "blockDescription": "დარწმუნებული ხართ, რომ გსურთ დაბლოკოთ <b>{name}?</b> დაბლოკილი მომხმარებლები ვერ გამოგიგზავნიან შეტყობინების მოთხოვნებს, ჯგუფის მოწვევებს ან ვერ დაგირეკავენ.",
   "blockUnblock": "ბლოკის მოხსნა",
-  "blockUnblockName": "დარწმუნებული ხართ, რომ გსურთ {name}-ის განბლოკვა?",
+  "blockUnblockName": "დარწმუნებული ხართ, რომ გსურთ <b>{name}</b>-ის განბლოკვა?",
   "blockUnblockNameMultiple": "დარწმუნებული ხართ, რომ გსურთ <b>{name}</b> და <b>{count} სხვების განბლოკვა</b>?",
   "blockUnblockNameTwo": "დარწმუნებული ხართ, რომ გსურთ <b>{name}</b> და 1 სხვების განბლოკვა?",
   "blockUnblockedUser": "{name}-ის ბლოკი მოხსნილია",
