--- a/_locales/km/messages.json
+++ b/_locales/km/messages.json
@@ -251,7 +251,7 @@
   "copy": "ចម្លង",
   "create": "បង្កើត",
   "cut": "កាត់",
-  "databaseErrorGeneric": "មានបញ្ហាមូលដ្ឋានទិន្នន័យបានកើតឡើង។<br‍\\‍/><br‍/>នាំចេញការកំណត់ត្រាអនុវត្តរបស់អ្នកដើម្បីចែករំលែកសម្រាប់ដោះស្រាយបញ្ហា។ ប្រសិនបើការនេះមិនបានជោគជ័យទេ សូមធ្វើការដំឡើង {app_name}<br‍/><br‍/>ឡើងវិញ និងស្តារឡើងវិញគណនីរបស់អ្នក។ ព្រមាន៖ នេះនឹងធ្វើឲ្យពុះសារទាំងនោះ មាតិកាភ្ជាប់ខាងក្នុង និងទិន្នន័យគណនីដែលចាស់ជាងពីរ​សប្តាហ៍បាត់មួយរយៈពេលខ្លី។",
+  "databaseErrorGeneric": "មានបញ្ហាមូលដ្ឋានទិន្នន័យបានកើតឡើង។<br/><br/>នាំចេញការកំណត់ត្រាអនុវត្តរបស់អ្នកដើម្បីចែករំលែកសម្រាប់ដោះស្រាយបញ្ហា។ ប្រសិនបើការនេះមិនបានជោគជ័យទេ សូមធ្វើការដំឡើង {app_name}<br/><br/>ឡើងវិញ និងស្តារឡើងវិញគណនីរបស់អ្នក។ ព្រមាន៖ នេះនឹងធ្វើឲ្យពុះសារទាំងនោះ មាតិកាភ្ជាប់ខាងក្នុង និងទិន្នន័យគណនីដែលចាស់ជាងពីរ​សប្តាហ៍បាត់មួយរយៈពេលខ្លី។",
   "databaseErrorTimeout": "យើងគិតថា {app_name} ពុំអាចចាប់ផ្ដើមបានយ៉ាងចំហរមួយរយៈ <br/><br/> អ្នកអាចរង់ចាំតទៅ ហៅទិន្នន័យឧបករណ៍របស់អ្នកដើម្បីជួយដោះស្រាយ បើទោះអញ្ចឹងក៏ដោយ សាកល្បងចាប់ផ្ដើម Session",
   "databaseErrorUpdate": "ឃ្លាំងទិន្នន័យរបស់កម្មវិធីរបស់អ្នកមិនអាចបើកជាមួយ {app_name} នេះទេ។ កញ្ចួញកម្មវិធីឡើងវិញ ហើយស្ដារគណនីរបស់អ្នកដើម្បីបង្កើតឃ្លាំងទិន្នន័យថ្មី និង​បន្តប្រើ {app_name}។<br/><br/>ការព្រមាន៖ នេះនឹងលុបបាត់ជាស្ថាពរ នូវសារទាំងអស់ និងឯកសារភ្ជាប់ដែលអាយុចាស់ជាងពីរសប្ដាហ៍។",
   "databaseOptimizing": "កំពុងធ្វើបច្ចុប្បន្នភាពមូលដ្ខានទិន្នន័យ",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendState": "បាត់ត្រលប់វិញបន្ទាប់ពីផ្ញើ - {time}",
   "disappearingMessagesFollowSetting": "តាមដានការកំណត់",
   "disappearingMessagesFollowSettingOff": "សារដែលអ្នកផ្ញើរចុះ ចោលបាត់។ តើអ្នកប្រាកដប្រានថាចង់បិទ <b>off</b> សារតែមួយនេះមែនទេ?",
-  "disappearingMessagesFollowSettingOn": "តើអ្នកចង់កំណត់សាររបស់អ្នកឲ្យលុប <b>{time}<\\/b> បន្ទាប់ពីពួគេចាប់ផ្ដើមលុបទាំងអស់<b>{disappearing_messages_type}<\\/b>?",
+  "disappearingMessagesFollowSettingOn": "តើអ្នកចង់កំណត់សាររបស់អ្នកឲ្យលុប <b>{time}</b> បន្ទាប់ពីពួគេចាប់ផ្ដើមលុបទាំងអស់<b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} កំពុងប្រើការនិយមថ្មីត្រូវបានធ្វើបច្ចុប្បន្នភាព។ សារបាត់ពេលអាចនឹងមិនដំណើរការដូច​ការ​រំពឹងទុក។",
   "disappearingMessagesOnlyAdmins": "មានតែអ្នកគ្រប់គ្រងក្រុមអាចផ្លាស់ប្ដូរការកំណត់នេះបាន។",
   "disappearingMessagesSent": "បានផ្ញើ",
@@ -412,7 +412,7 @@
   "groupMemberNewTwo": "<b>{name}</b> និង <b>{other_name}</b> ត្រូវបានអញ្ជើញឱ្យចូលក្រុមនេះ។",
   "groupMemberNewYouHistoryMultiple": "<b>អ្នក</b> និង <b>{count} គេផ្សេងទៀត</b> ត្រូវបានអញ្ជើញឱ្យចូលក្រុមនេះ។បានចែករំលែកប្រវត្តិការជជែក។",
   "groupMemberNewYouHistoryTwo": "<b>អ្នក</b> និង <b>{name}</b> ត្រូវបានអញ្ជើញឱ្យចូលក្រុមនេះ។បានចែករំលែកប្រវត្តិការជជែក។",
-  "groupMemberYouLeft": "<b>អ្នក<br‍\\‍/><br‍\\‍/>បានចាកចេញពីក្រុម។",
+  "groupMemberYouLeft": "<b>អ្នក</b>បានចាកចេញពីក្រុម។",
   "groupMembers": "សមាជិកក្រុម",
   "groupMembersNone": "គ្មានសមាជិកផ្សេងទៀតនៅក្នុងក្រុមនេះទេ",
   "groupName": "ឈ្មោះក្រុម",
@@ -498,8 +498,8 @@
   "membersAddAccountIdOrOns": "បន្ថែម Account ID ឬ ONS",
   "membersInvite": "អញ្ជើញទំនាក់ទំនង",
   "membersInviteSend": "{count, plural, other [ផ្ញើការអញ្ជើញច្រើន]}",
-  "membersInviteShareDescription": "តើអ្នកចង់ចែករំលែកប្រវត្តិសារក្រុមជាមួយ <b>{name} <\\/b> មែនទេ?",
-  "membersInviteShareDescriptionMultiple": "តើអ្នកចង់ចែករំលែកប្រវត្តិសារក្រុមជាមួយ <b>{name} </b> និង <b>{count} អ្នកផ្សេងទៀត </b> មែនទេ?",
+  "membersInviteShareDescription": "តើអ្នកចង់ចែករំលែកប្រវត្តិសារក្រុមជាមួយ <b>{name}</b> មែនទេ?",
+  "membersInviteShareDescriptionMultiple": "តើអ្នកចង់ចែករំលែកប្រវត្តិសារក្រុមជាមួយ <b>{name}</b> និង <b>{count} អ្នកផ្សេងទៀត</b> មែនទេ?",
   "membersInviteShareDescriptionTwo": "តើអ្នកចង់ចែករំលែកប្រវត្តិសារក្រុមជាមួយ <b>{name}</b> និង <b>{other_name}</b> មែនទេ?",
   "membersInviteShareMessageHistory": "ចែករំលែកប្រវត្តិសារ",
   "membersInviteShareNewMessagesOnly": "ចែករំលែកតែការផ្ញើសារថ្មី",
@@ -518,7 +518,7 @@
   "messageNewDescriptionMobile": "ចាប់ផ្តើមការសន្ទនាថ្មីដោយបញ្ចូល Account ID របស់មិត្តភក្តិរបស់អ្នក, ONS ឬស្កេនកូដ QR របស់ពួកគេ។",
   "messageNewYouveGot": "{count, plural, other [អ្នកមានសារថ្មី # សារ។]}",
   "messageReplyingTo": "ឆ្លើយតបទៅកាន់",
-  "messageRequestGroupInvite": "<b>{name}‍> អញ្ជើញអ្នកឱ្យចូល <b>{group_name}‍>។",
+  "messageRequestGroupInvite": "<b>{name}‍</b>អញ្ជើញអ្នកឱ្យចូល <b>{group_name}‍</b>",
   "messageRequestGroupInviteDescription": "ការផ្ញើសារទៅក្រុមនេះនឹងទទួលយកការអញ្ជើញក្រុមដោយស្វ័យប្រវត្តិ។",
   "messageRequestPending": "សំណើសុំសាររបស់អ្នក​នឹង​កំពុងរង់ចាំថ្មីៗនេះ។",
   "messageRequestPendingDescription": "អ្នក​នឹង​អាច​ផ្ញើសារសំឡេង និងឯកសារភ្ជាប់ បន្ទាប់ពី​អ្នក​ទទួល បាន​យល់ព្រមលើសំណើសារនេះ។",
