--- a/_locales/kn/messages.json
+++ b/_locales/kn/messages.json
@@ -127,7 +127,7 @@
   "blockBlockedUser": "{name} ತಡೆ ಮಾಡಲಾಗಿದೆ",
   "blockDescription": "ನೀವು ಖಚಿತವಾಗಿ <b>{name}</b>ನ್ನು ತಡೆಯಲು ಬಯಸುವಿರಾ? ತಡೆಮಾಡಿದ ಬಳಕೆದಾರರು ನಿಮಗೆ ಸಂದೇಶ ವಿನಂತಿಗಳನ್ನು, ಗುಂಪು ಆಹ್ವಾನವನ್ನು ಕಳುಹಿಸಲು ಅಥವಾ ನಿಮಗೆ ಕರೆಮಾಡಲು ಸಾಧ್ಯವಿಲ್ಲ.",
   "blockUnblock": "ಅನ್‌ಬ್ಲಾಕ್",
-  "blockUnblockName": "ನೀವು {name} ಅನ್ನು ಅನ್‌ಬ್ಲಾಕ್ ಮಾಡಲು ಖಚಿತವಾಗಿದ್ದೀರಾ?",
+  "blockUnblockName": "ನೀವು <b>{name}</b> ಅನ್ನು ಅನ್‌ಬ್ಲಾಕ್ ಮಾಡಲು ಖಚಿತವಾಗಿದ್ದೀರಾ?",
   "blockUnblockNameMultiple": "ನೀವು <b>{name}</b> ಮತ್ತು <b>{count}</b> ಇತರರನ್ನು ಅನ್‌ಬ್ಲಾಕ್ ಮಾಡಲು ಖಚಿತವಾಗಿದ್ದೀರಾ?",
   "blockUnblockNameTwo": "ನೀವು <b>{name}</b> ಮತ್ತು 1 ಇತರರನ್ನು ಅನ್‌ಬ್ಲಾಕ್ ಮಾಡಲು ಖಚಿತವಾಗಿದೆಯ?",
   "blockUnblockedUser": "{name} ಅನ್ಬ್ಲಾಕ್ ಮಾಡಿದನು",
