--- a/_locales/lo/messages.json
+++ b/_locales/lo/messages.json
@@ -189,14 +189,14 @@
   "groupInviteYou": "<b>ທ່ານ</b>ໄດ້ຖືກຊັ້ນເຊີນເຂົ້າຖານຊາດ.",
   "groupLeaveDescription": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການອອກຈາກ <b>{group_name}</b>?",
   "groupLeaveErrorFailed": "ບໍ່ສາມາດອອກຈາກ {group_name}",
-  "groupMemberLeft": "<b>{name}ອອກຈາກກຸ່ມ.",
-  "groupMemberLeftMultiple": "<b>{name}</b> ແລະ <b>{count} \",",
+  "groupMemberLeft": "<b>{name}</b>ອອກຈາກກຸ່ມ.",
+  "groupMemberLeftMultiple": "<b>{name}</b> ແລະ <b>{count}</b> ",
   "groupMemberLeftTwo": "<b>{name}</b>และ<b>{other_name}</b>ออกจากກຸ່ມ.",
-  "groupMemberNew": "<b>{name}ເຂົ້າຮ່ວມກຸ່ມ.",
+  "groupMemberNew": "<b>{name}</b>ເຂົ້າຮ່ວມກຸ່ມ.",
   "groupMemberYouLeft": "<b>ທ່ານ</b>ອອກຈາກກຸ່ມ.",
   "groupNameEnter": "ປ້ອນຊື່ກຸ່ມ",
   "groupPromotedYou": "<b>ທ່ານ</b>ໄດ້ຮັບການເລື່ອນຊັ້ນການຄຸ້ມຄອງ.",
-  "groupRemoved": "<b>{name}ໄດ້ຖືກລຶບອອກຈາກກຸ່ມ.",
+  "groupRemoved": "<b>{name}</b>ໄດ້ຖືກລຶບອອກຈາກກຸ່ມ.",
   "groupRemovedMultiple": "<b>{name}</b> ແລະ <b>{count}</b>",
   "groupRemovedTwo": "<b>{name}</b>และ<b>{other_name}</b>ໄດ້ຖືກລຶບອອກຈາກກຸ່ມ.",
   "helpReportABugExportLogs": "ສົ່ງຂໍ້ຄວາມບັກ",
