--- a/_locales/mk/messages.json
+++ b/_locales/mk/messages.json
@@ -426,14 +426,14 @@
   "groupPromotedYou": "<b>Вие</b> бевте промовирани во Админ.",
   "groupPromotedYouMultiple": "<b>Вие</b> и <b>{count} други</b> бевте промовирани во адм.",
   "groupPromotedYouTwo": "<b>Вие</b> и <b>{name}</b> бевте промовирани во адм.",
-  "groupRemoveDescription": "Дали сакате да го отстраните <b>{name}</b> од <b>{group_name}?</b>",
-  "groupRemoveDescriptionMultiple": "Дали сакате да ги отстраните <b>{name}</b> и <b>{count} други</b> од <b>{group_name}?</b>",
-  "groupRemoveDescriptionTwo": "Дали сакате да ги отстраните <b>{name}</b> и <b>{other_name}</b> од <b>{group_name}?</b>",
+  "groupRemoveDescription": "Дали сакате да го отстраните <b>{name}</b> од <b>{group_name}</b>?",
+  "groupRemoveDescriptionMultiple": "Дали сакате да ги отстраните <b>{name}</b> и <b>{count} други</b> од <b>{group_name}</b>?",
+  "groupRemoveDescriptionTwo": "Дали сакате да ги отстраните <b>{name}</b> и <b>{other_name}</b> од <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Отстрани корисник и неговите пораки] other [Отстрани корисници и нивните пораки]}",
   "groupRemoveUserOnly": "{count, plural, one [Отстрани корисник ] other [Отстрани корисници]}",
-  "groupRemoved": "<b>{name} <\\/b> беше отстранет од групата.",
+  "groupRemoved": "<b>{name}</b> беше отстранет од групата.",
   "groupRemovedMultiple": "<b>{name}</b> и <b>{count} други</b> беа отстранети од групата.",
-  "groupRemovedTwo": "<b>{name}</b> и <b>{other_name} </b> беа отстранети од групата.",
+  "groupRemovedTwo": "<b>{name}</b> и <b>{other_name}</b> беа отстранети од групата.",
   "groupRemovedYou": "Бевте отстранети од <b>{group_name}</b>.",
   "groupRemovedYouMultiple": "<b>Вие</b> и <b>{count} други</b> беа отстранети од групата.",
   "groupRemovedYouTwo": "<b>Вие</b> и <b>{other_name}</b> беа отстранети од групата.",
