--- a/_locales/mn/messages.json
+++ b/_locales/mn/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} -г хориглосон",
   "blockDescription": "Та <b>{name}</b>-ийг хаахыг хүсэж байгаадаа итгэлтэй байна уу? Хаагдсан хэрэглэгчид танд мессеж хүсэлт илгээж, бүлгийн урилга илгээж эсвэл залгах боломжгүй.",
   "blockUnblock": "Түгжээг арилгах",
-  "blockUnblockName": "Та {name}-г тайлах нь итгэлтэй байна уу?",
+  "blockUnblockName": "Та <b>{name}</b>-г тайлах нь итгэлтэй байна уу?",
   "blockUnblockNameMultiple": "Та<b>{name}</b> -ыг болон <b>{count}</b> бусад ыг тайлах нь итгэлтэй байна уу?",
-  "blockUnblockNameTwo": "Та {name} болон нэг өөр хүнийг тайлах нь итгэлтэй байна уу?",
+  "blockUnblockNameTwo": "Та <b>{name}</b> болон нэг өөр хүнийг тайлах нь итгэлтэй байна уу?",
   "blockUnblockedUser": "{name} түгжээг арилгасан",
   "call": "Дуудлага",
   "callsCalledYou": "{name} тан руу залгасан",
