--- a/_locales/my/messages.json
+++ b/_locales/my/messages.json
@@ -127,7 +127,7 @@
   "blockBlockedUser": "{name} မှ ဘလော့ ခံထားသည်",
   "blockDescription": "သင် <b>{name} </b> ကို ဘလော့ခ်ချင်တာ သေချာရဲ ့လား? ဘလော့ခ်ထားတဲ့ လူတွေက မက်ဆေ့ချ်လာပို့ခွင့်၊အဖွဲ့ခေါ်ခံရခွင့် နဲ့ဖုန်းခေါ်ရခွင့် ရနိုင်မှာမဟုတ်ပါဘူး။",
   "blockUnblock": "ဘလော့ဖြေမည်",
-  "blockUnblockName": "သင့် {name} ကို အုပ်ချုပ်ရေးမှူး ဖြစ်ရန် ခန့်ရှင်းလိုသည်မှာ သေချာပါသလား။",
+  "blockUnblockName": "သင့် <b>{name}</b> ကို အုပ်ချုပ်ရေးမှူး ဖြစ်ရန် ခန့်ရှင်းလိုသည်မှာ သေချာပါသလား။",
   "blockUnblockNameMultiple": "သင် <b>{name}</b> နှင့် <b>{count}</b> ဦး ကို အုပ်ချုပ်ရေးမှူး ဖြစ်ရန် ခန့်ရှင်းလိုသည်မှာ သေချာပါသလား။",
   "blockUnblockNameTwo": "သင် <b>{name}</b> နှင့် ၁ ဦး ကို အုပ်ချုပ်ရေးမှူး ဖြစ်ရန် ခန့်ရှင်းလိုသည်မှာ သေချာပါသလား။",
   "blockUnblockedUser": "{name} ကိုဘလော့ဖြေလိုက်ပြီ",
