--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -251,7 +251,7 @@
   "copy": "Kopier",
   "create": "Opprett",
   "cut": "Klipp ut",
-  "databaseErrorGeneric": "En databasefeil ,å dele for feilsøking. Hvis dette mislykkes, installer {app_name} på nytt og gjenopprett kontoen din.<br/><br/>Advarsel: Dette vil resultere i tap av alle meldinger, vedlegg og kontodata som er eldre enn to uker.",
+  "databaseErrorGeneric": "En databasefeil ,å dele for feilsøking.<br/><br/>Hvis dette mislykkes, installer {app_name} på nytt og gjenopprett kontoen din.<br/><br/>Advarsel: Dette vil resultere i tap av alle meldinger, vedlegg og kontodata som er eldre enn to uker.",
   "databaseErrorTimeout": "Vi har lagt merke til at {app_name} tar lang tid å starte.<br/><br/>Du kan vente videre, eksportere loggene på enheten din for å dele for feilsøking, eller prøve å starte Session på nytt.",
   "databaseErrorUpdate": "App-databasen din er inkompatibel med denne versjonen av {app_name}. Installer appen på nytt og gjenopprett kontoen din for å generere en ny database og fortsette å bruke {app_name}.<br/><br/>Advarsel: Dette vil resultere i tap av alle meldinger og vedlegg eldre enn to uker.",
   "databaseOptimizing": "Optimaliserer databasen",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>Du</b> og <b>{count} andre</b> ble invitert til gruppen.",
   "groupInviteYouAndOtherNew": "<b>Du</b> og <b>{other_name}</b> ble invitert til gruppen.",
   "groupLeave": "Forlat gruppe",
-  "groupLeaveDescription": "Er du sikker på at du vil forlate {group_name}?",
+  "groupLeaveDescription": "Er du sikker på at du vil forlate <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Er du sikker på at du vil forlate <b>{group_name}</b>?<br/><br/>Dette vil fjerne alle medlemmer og slette alt gruppearbeid.",
   "groupLeaveErrorFailed": "Kunne ikke forlate {group_name}",
   "groupLegacyBanner": "Grupper har blitt oppgradert, opprett en ny gruppe for å oppgradere. Gammel gruppefunksjonalitet vil bli redusert fra {date}.",
