--- a/_locales/ps/messages.json
+++ b/_locales/ps/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} بلاک کړ",
   "blockDescription": "آیا تاسې ډاډه یاست چې غواړئ <b>{name}‌</b> بلاک کړئ؟ بلاک شوي کاروونکي تاسو ته د پیغام غوښتنې، د ډلې بلنې یا زنګ وهلو وړتیا نه لري.",
   "blockUnblock": "بېبندیز",
-  "blockUnblockName": "آیا تاسو ډاډه یاست چې {name} غیر بلاک کړئ؟",
-  "blockUnblockNameMultiple": "آیا تاسو ډاډه یاست چې غواړئ </b>{name}<b> او </b>{count}<b> نور غیر بلاک کړئ؟",
-  "blockUnblockNameTwo": "آیا تاسو ډاډه یاست چې غواړئ </b>{name}<b> او 1 بل غیر بلاک کړئ؟",
+  "blockUnblockName": "ایا تاسو ډاډه یاست چې تاسو د <b>{name}</b> بلاک کول غواړئ؟",
+  "blockUnblockNameMultiple": "ایا تاسو ډاډه یاست چې تاسو غواړئ <b>{name}</b> او <b>{count} نور</b> خلاص کړئ؟",
+  "blockUnblockNameTwo": "ایا تاسو ډاډه یاست چې تاسو غواړئ <b>{name}</b> او 1 نور بلاک کړئ؟",
   "blockUnblockedUser": "{name} بېبندیز شو",
   "call": "کال",
   "callsCalledYou": "{name} تاسو ته زنګ وواهه",
@@ -397,8 +397,8 @@
   "groupInviteYouAndMoreNew": "<b>تاسو</b> او <b>{count} نور</b> ډله کې ګډون کولو ته بلل شوي.",
   "groupInviteYouAndOtherNew": "<b>تاسو</b> او <b>{other_name}</b> ډله کې ګډون کولو ته بلل شوي.",
   "groupLeave": "ډله پرېږده",
-  "groupLeaveDescription": "آیا تاسو ډاډه یاست چې غواړئ </b>{group_name}<b> پرېږدئ؟",
-  "groupLeaveDescriptionAdmin": "ته ډاډه يې چې غواړې <b>{group_name}</b> پریږدې؟<br/><br/>دا به ټول غړي لرې کړي او ټول ډلې منځپانګه به حذف کړي.",
+  "groupLeaveDescription": "ایا تاسو ډاډه یاست چې <b>{group_name}</b> پریږدئ؟",
+  "groupLeaveDescriptionAdmin": "ایا تاسو ډاډه یاست چې تاسو غواړئ <b>{group_name}</b> پریږدئ؟<br/><br/>دا به ټول غړي لرې کړي او د ډلې ټول مینځپانګه به حذف کړي.",
   "groupLeaveErrorFailed": "د {group_name} پرېښودو کې ناکامه",
   "groupLegacyBanner": "ډلې پرمختګ کړی دی، د نویو ډلو د جوړولو لپاره نوی ډله جوړه کړئ. د زړو ډلو فعالیت به له {date} څخه کم شي.",
   "groupMemberLeft": "<b>{name}</b> ګروپ پریښود.",
