--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -127,7 +127,7 @@
   "blockBlockedUser": "Заблокирован {name}",
   "blockDescription": "Вы уверены, что хотите заблокировать <b>{name}?</b> Заблокированные пользователи не могут отправлять вам запросы сообщений, приглашения в группы или звонить вам.",
   "blockUnblock": "Разблокировать",
-  "blockUnblockName": "Вы уверены, что хотите разблокировать {name}?",
+  "blockUnblockName": "Вы уверены, что хотите разблокировать <b>{name}</b>?",
   "blockUnblockNameMultiple": "Вы уверены, что хотите разблокировать <b>{name}</b> и <b>{count} других</b>?",
   "blockUnblockNameTwo": "Вы уверены, что хотите разблокировать <b>{name}</b> и ещё одного пользователя?",
   "blockUnblockedUser": "Разблокирован {name}",
