--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -316,7 +316,7 @@
   "disappearingMessagesSetYou": "<b>Ви</b> сте подесили да поруке нестају {time} након што су биле {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Тајмер",
   "disappearingMessagesTurnedOff": "<b>{name}</b> је искључио нестајуће поруке. Поруке које пошаљу више неће нестати.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> је искључио нестајуће поруке.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> је <b>искључио</b> поруке које нестају.",
   "disappearingMessagesTurnedOffYou": "<b>Ви</b> сте искључили <b>нестајуће поруке</b>. Поруке које пошаљете више неће нестати.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Ви</b> сте искључили <b>искључили</b> поруке које нестају.",
   "disappearingMessagesTypeRead": "прочитај",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>Ви</b> и <b>{count} осталих</b> су позвани да се придруже групи.",
   "groupInviteYouAndOtherNew": "<b>Ви</b> и <b>{other_name}</b> су позвани да се придруже групи.",
   "groupLeave": "Напусти групу",
-  "groupLeaveDescription": "Да ли сте сигурни да желите да напустите {group_name}?",
+  "groupLeaveDescription": "Да ли сте сигурни да желите да напустите <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Да ли сте сигурни да желите да напустите <b>{group_name}</b>?<br/><br/>Ово ће уклонити све чланове и избрисати сав садржај групе.",
   "groupLeaveErrorFailed": "Напуштање {group_name} није успело",
   "groupLegacyBanner": "Групе су надограђене, креирајте нову групу да бисте ажурирали. Стара функционалност групе ће бити деградирана од {date}.",
