--- a/_locales/te/messages.json
+++ b/_locales/te/messages.json
@@ -127,7 +127,7 @@
   "blockBlockedUser": "{name} నిరోధించబడింది",
   "blockDescription": "మీరు <b>{name}</b>ని బ్లాక్ చేయాలనుకుంటున్నారా? బ్లాక్ చేసిన వినియోగదారులు మీకు సందేశ వివరణలను పంపలేరు, సమూహ ఆహ్వానాలు లేదా మీకు కాల్ చేయలేరు.",
   "blockUnblock": "అనుమతించు",
-  "blockUnblockName": "మీరు {name} ను అన్‌బ్లాక్ చేయాలనుకుంటున్నారా?",
+  "blockUnblockName": "మీరు <b>{name}</b> ను అన్‌బ్లాక్ చేయాలనుకుంటున్నారా?",
   "blockUnblockNameMultiple": "మీరు <b>{name}</b> మరియు <b>{count}</b> ఇతరులను అన్‌బ్లాక్ చేయాలనుకుంటున్నారా?",
   "blockUnblockNameTwo": "మీరు <b>{name}</b> మరియు 1 ఇతర వ్యక్తిని అన్‌బ్లాక్ చేయాలనుకుంటున్నారా?",
   "blockUnblockedUser": "అనుమతించబడిన {name}",
@@ -398,7 +398,7 @@
   "groupInviteYouAndMoreNew": "<b>మీరు</b> మరియు <b>{count} ఇతరులు</b> సమూహంలో చేరడానికి ఆహ్వానించబడ్డారు.",
   "groupInviteYouAndOtherNew": "<b>మీరు</b> మరియు <b>{other_name}</b> సమూహంలో చేరడానికి ఆహ్వానించబడ్డారు.",
   "groupLeave": "సమూహాన్ని వదులు",
-  "groupLeaveDescription": "మీరు {group_name} ను వదిలిపెట్టాలనుకుంటున్నారా?",
+  "groupLeaveDescription": "మీరు <b>{group_name}</b> ను వదిలిపెట్టాలనుకుంటున్నారా?",
   "groupLeaveDescriptionAdmin": "మీరు <b>{group_name}</b> వదిలివేయాలనుకుంటున్నారా?<br/><br/> ఇది అన్ని సభ్యులను తొలగించి, అన్ని సమూహ విషయాన్ని తొలగిస్తుంది.",
   "groupLeaveErrorFailed": "{group_name} ను వదిలివేయడంలో విఫలమైంది",
   "groupLegacyBanner": "సమూహాలు అభివృద్ధి చేయబడ్డాయి, మెరుగుపరచడానికి కొత్త సమూహం సృష్టించండి. పాత సమూహ పనితీరు {date} నుండి దిగజారిపోతుంది.",
