--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -128,8 +128,8 @@
   "blockDescription": "<b>{name}</b>'i engellemek istediğinizden emin misiniz? Engelli kullanıcılar size mesaj isteği gönderemez, grup davetiyeleri gönderemez veya sizi arayamaz.",
   "blockUnblock": "Engeli Kaldır",
   "blockUnblockName": "<b>{name}</b> kişisinin engelini kaldırmak istediğinizden emin misiniz?",
-  "blockUnblockNameMultiple": "{name} ve {count} diğerinin engelini kaldırmak istediğinizden emin misiniz?",
-  "blockUnblockNameTwo": "{name} ve 1 diğerinin engelini kaldırmak istediğinizden emin misiniz?",
+  "blockUnblockNameMultiple": "<b>{name}</b> ve <b>{count}</b> diğerinin engelini kaldırmak istediğinizden emin misiniz?",
+  "blockUnblockNameTwo": "<b>{name}</b> ve 1 diğerinin engelini kaldırmak istediğinizden emin misiniz?",
   "blockUnblockedUser": "Engel kaldırıldı {name}",
   "call": "Ara",
   "callsCalledYou": "{name} seni aradı",
