--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -252,7 +252,7 @@
   "copy": "Sao chép",
   "create": "Tạo",
   "cut": "Cắt",
-  "databaseErrorGeneric": "Một lỗi cơ sở dữ liệu đã xảy ra.<br\\/><br\\/>Xuất nhật ký ứng dụng của bạn để chia sẻ nhằm xử lý sự cố. Nếu không thành công, hãy cài đặt lại {app_name} và khôi phục tài khoản của bạn.<br/><br/>Cảnh báo: Điều này sẽ dẫn đến mất tất cả tin nhắn, tệp đính kèm và dữ liệu tài khoản cũ hơn hai tuần.",
+  "databaseErrorGeneric": "Một lỗi cơ sở dữ liệu đã xảy ra.<br/><br/>Xuất nhật ký ứng dụng của bạn để chia sẻ nhằm xử lý sự cố. Nếu không thành công, hãy cài đặt lại {app_name} và khôi phục tài khoản của bạn.<br/><br/>Cảnh báo: Điều này sẽ dẫn đến mất tất cả tin nhắn, tệp đính kèm và dữ liệu tài khoản cũ hơn hai tuần.",
   "databaseErrorTimeout": "Chúng tôi nhận thấy {app_name} mất nhiều thời gian để khởi động.<br/><br/>Bạn có thể tiếp tục chờ, xuất nhật ký thiết bị để chia sẻ hỗ trợ khắc phục sự cố, hoặc thử khởi động lại Session.",
   "databaseErrorUpdate": "Cơ sở dữ liệu ứng dụng của bạn không tương thích với phiên bản {app_name} này. Cài đặt lại ứng dụng và khôi phục tài khoản của bạn để tạo một cơ sở dữ liệu mới và tiếp tục sử dụng {app_name}.<br/><br/>Cảnh báo: Điều này sẽ dẫn đến việc mất tất cả tin nhắn và tệp đính kèm cũ hơn hai tuần.",
   "databaseOptimizing": "Đang tối ưu hóa cơ sở dữ liệu",
@@ -532,7 +532,7 @@
   "messageRequestsDelete": "Bạn có chắc chắn rằng bạn muốn xoá yêu cầu tin nhắn này không?",
   "messageRequestsNew": "Bạn có yêu cầu tin nhắn mới",
   "messageRequestsNonePending": "Không có yêu cầu tin nhắn đang chờ",
-  "messageRequestsTurnedOff": "<b>{name} <\\/b> đã tắt yêu cầu tin nhắn từ các cuộc trò chuyện <b> Community <\\/b>, do đó bạn không thể gửi tin nhắn cho họ.",
+  "messageRequestsTurnedOff": "<b>{name}</b> đã tắt yêu cầu tin nhắn từ các cuộc trò chuyện <b>Community</b>, do đó bạn không thể gửi tin nhắn cho họ.",
   "messageSelect": "Chọn tin nhắn",
   "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "Gửi đi không được",
