--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -16,7 +16,7 @@
   "adminCannotBeRemoved": "Hindi maaaring alisin ang mga admin.",
   "adminMorePromotedToAdmin": "<b>{name}</b> at <b>{count} iba pa</b> na-promote sa Admin.",
   "adminPromote": "I-promote ang Mga Admin",
-  "adminPromoteDescription": "Sigurado ka bang nais mong i-promote si <b>{name} <\\/b> bilang admin? Ang mga admin ay hindi maaaring tanggalin.",
+  "adminPromoteDescription": "Sigurado ka bang nais mong i-promote si <b>{name}</b> bilang admin? Ang mga admin ay hindi maaaring tanggalin.",
   "adminPromoteMoreDescription": "Sigurado ka bang nais mong i-promote si <b>{name}</b> at <b>{count} others</b> bilang admin? Ang mga admin ay hindi maaaring tanggalin.",
   "adminPromoteToAdmin": "I-promote bilang Admin",
   "adminPromoteTwoDescription": "Sigurado ka bang nais mong i-promote si <b>{name}</b> at <b>{other_name}</b> bilang admin? Ang mga admin ay hindi maaaring tanggalin.",
@@ -312,7 +312,7 @@
   "disappearingMessagesLegacy": "Ginagamit ni {name} ang isang lumang cliente. Maaaring hindi gumana ng tama ang mga disappearing message.",
   "disappearingMessagesOnlyAdmins": "Tanging admin ng grupo lamang ang maaaring magbago ng setting na ito.",
   "disappearingMessagesSent": "Sent",
-  "disappearingMessagesSet": "Itinakda ni <b>{name} <\\/b> ang mga mensahe na maglalaho {time} pagkatapos nilang ma-{disappearing_messages_type}.",
+  "disappearingMessagesSet": "Itinakda ni <b>{name}</b> ang mga mensahe na maglalaho {time} pagkatapos nilang ma-{disappearing_messages_type}.",
   "disappearingMessagesSetYou": "<b>Itinakda</b> mo ang timer ng naglalahong mensahe sa {time} pagkatapos nilang ma-{disappearing_messages_type}.",
   "disappearingMessagesTimer": "Timer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ay nag-off ng nawawalang mga mensahe. Ang mga mensaheng pinadala nila ay hindi na maglalaho.",
@@ -423,7 +423,7 @@
   "groupNameUpdated": "Na-update na ang pangalan ng grupo.",
   "groupNoMessages": "Wala kang mga mensahe mula sa <b>{group_name}.</b> Magpadala ng mensahe para simulan ang pag-uusap!",
   "groupOnlyAdmin": "Ikaw lang ang admin sa <b>{group_name}</b>.<br/><br/>Hindi maaaring baguhin ang mga miyembro ng grupo at mga settings kung walang admin.",
-  "groupPromotedYou": "Ikaw ay na-promote sa Admin.",
+  "groupPromotedYou": "<b>Ikaw</b> ay na-promote sa Admin.",
   "groupPromotedYouMultiple": "<b>Ikaw</b> at <b>{count} iba pa</b> na-promote sa Admin.",
   "groupPromotedYouTwo": "<b>Ikaw</b> at si <b>{name}</b> na-promote sa Admin.",
   "groupRemoveDescription": "Gusto mo bang tanggalin si <b>{name}</b> mula sa <b>{group_name}</b>?",
